@@ -1,5 +1,4 @@
-#########
-# Author:        Marina Gourtovaia
+######### # Author:        Marina Gourtovaia
 # Created:       14 December 2012
 # copied from: svn+ssh://svn.internal.sanger.ac.uk/repos/svn/new-pipeline-dev/instrument_handling/trunk/lib/srpipe/runner/jenkins.pm, r17056
 #
@@ -15,16 +14,22 @@ extends 'npg_tracking::daemon';
 
 Readonly::Scalar our $PROXY_SERVER => q[wwwcache.sanger.ac.uk];
 Readonly::Scalar our $PROXY_PORT   => 3128;
-Readonly::Scalar our $COMMAND => qq[java -Xmx2g -Dhttp.proxyHost=$PROXY_SERVER -Dhttp.proxyPort=$PROXY_PORT -jar ~srpipe/jenkins.war --httpPort=9960];
 
-override '_build_hosts' => sub { return ['sf-4-1-02','sf2-farm-srv1']; };
+override '_build_hosts' => sub { return ['sf2-farm-srv2']; };
 override '_build_env_vars' => sub { return {'http_proxy' => qq[http://$PROXY_SERVER:$PROXY_PORT]}; };
+
+# We assume that $JENKINS_HOME is the same both where the daemon monitor is run and the jenkins server is started.
 override 'command'  => sub {
   my ($self, $host) = @_;
+
+  my $tmpdir = $ENV{'JENKINS_HOME'} ?  "-Djava.io.tmpdir=$ENV{'JENKINS_HOME'}/tmp" : q[]; #no need to reinforce /tmp
+  my $command = qq[java -Xmx2g $tmpdir -Dhttp.proxyHost=$PROXY_SERVER -Dhttp.proxyPort=$PROXY_PORT -jar ~srpipe/jenkins.war --httpPort=9960];
+
   my $log_name = join q[_], q[jenkins], $host, $self->timestamp();
   $log_name .=  q[.log];
-  return join q[ ], $COMMAND, q[--logfile=] . $self->log_dir . q[/]. $log_name;
+  return join q[ ], $command, q[--logfile=] . $self->log_dir . q[/]. $log_name;
 };
+
 override 'daemon_name'  => sub { return 'npg_jenkins'; };
 
 
