@@ -1,5 +1,7 @@
 CHANGES
 
+- use ${JENKINS_HOME}/tmp instead of /tmp for jenkins tmpdir 
+
 release 75.3
  - default UTF8 output for samplesheets
  - add number of lanes to run list views
